--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.10",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.5.5",
     "next": "14.2.12",
@@ -21,7 +23,7 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.12",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12"
   }
 }
