--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "daisyui": "^4.12.10",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.5.5",
-    "next": "14.2.12",
+    "next": "^14.2.12",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
