--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
     "dotenv": "^16.4.5",
     "next": "14.2.12",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-rating": "^2.0.5",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "eslint": "^8",
