--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.3.0",
     "react-moment": "^1.1.3",
     "react-rating": "^2.0.5",
+    "react-tabs": "^6.0.2",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
