--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@smastrom/react-rating": "^1.5.0",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.10",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.5.5",
     "lucide-react": "^0.445.0",
+    "mongodb": "^6.9.0",
     "next": "^14.2.12",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
