--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-moment": "^1.1.3",
     "react-rating": "^2.0.5",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
