--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
+    "@react-icons/all-files": "^4.1.0",
+    "chart.js": "^4.4.4",
     "dotenv": "^16.4.5",
     "next": "14.2.12",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
