--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^6.9.0",
     "next": "^14.2.12",
     "next-auth": "^4.24.7",
+    "qrcode.react": "^4.0.1",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
