--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
@@ -22,7 +23,7 @@
     "daisyui": "^4.12.10",
     "dotenv": "^16.4.5",
     "form-data": "^4.0.0",
-    "framer-motion": "^11.5.5",
+    "framer-motion": "^11.5.6",
     "lucide-react": "^0.445.0",
     "mailgun-js": "^0.22.0",
     "mailgun.js": "^10.2.3",
