--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "mailgun-js": "^0.22.0",
     "mailgun.js": "^10.2.3",
     "mongodb": "^6.9.0",
-    "next": "^14.2.12",
+    "next": "^14.2.13",
     "next-auth": "^4.24.7",
     "qrcode.react": "^4.0.1",
     "react": "^18",
@@ -38,12 +38,15 @@
     "react-moment": "^1.1.3",
     "react-range": "^1.10.0",
     "react-rating": "^2.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
+    "react-youtube": "^10.1.0",
     "sweetalert2": "^11.14.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.168.0"
   },
   "devDependencies": {
     "eslint": "^8",
