--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@smastrom/react-rating": "^1.5.0",
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -36,6 +37,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-moment": "^1.1.3",
+    "react-owl-carousel": "^2.3.3",
     "react-range": "^1.10.0",
     "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
