--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-google-maps/api": "^2.19.3",
-    "@react-icons/all-files": "^4.1.0",
-    "chart.js": "^4.4.4",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@react-google-maps/api": "^2.19.3",
+    "@react-icons/all-files": "^4.1.0",
     "@smastrom/react-rating": "^1.5.0",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.10",
@@ -42,12 +42,14 @@
     "react-moment": "^1.1.3",
     "react-range": "^1.10.0",
     "react-rating": "^2.0.5",
+    "react-simple-typewriter": "^5.0.1",
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
     "sweetalert2": "^11.14.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "eslint": "^8",
