--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-icons": "^5.3.0",
     "react-moment": "^1.1.3",
     "react-owl-carousel": "^2.3.3",
+    "react-parallax": "^3.5.1",
     "react-range": "^1.10.0",
     "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
@@ -52,8 +53,8 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "typewriter-effect": "^2.21.0",
-    "three": "^0.168.0"
+    "three": "^0.168.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "eslint": "^8",
