--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@smastrom/react-rating": "^1.5.0",
@@ -21,6 +23,7 @@
     "clsx": "^2.1.1",
     "daisyui": "^4.12.10",
     "dotenv": "^16.4.5",
+    "file-saver": "^2.0.5",
     "form-data": "^4.0.0",
     "framer-motion": "^11.5.5",
     "lucide-react": "^0.445.0",
@@ -29,11 +32,16 @@
     "mongodb": "^6.9.0",
     "next": "^14.2.12",
     "next-auth": "^4.24.7",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.0.1",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-moment": "^1.1.3",
+    "react-qr-code": "^2.0.15",
     "react-range": "^1.10.0",
     "react-rating": "^2.0.5",
     "react-tabs": "^6.0.2",
@@ -41,7 +49,8 @@
     "sweetalert2": "^11.14.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^8",
