--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@react-google-maps/api": "^2.19.3",
     "@react-icons/all-files": "^4.1.0",
     "@smastrom/react-rating": "^1.5.0",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.58.0",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
@@ -45,6 +48,8 @@
     "react-range": "^1.10.0",
     "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
+    "react-simple-typewriter": "^5.0.1",
+    "react-spinners": "^0.14.1",
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
     "react-youtube": "^10.1.0",
@@ -52,8 +57,8 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "typewriter-effect": "^2.21.0",
-    "three": "^0.168.0"
+    "three": "^0.168.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "eslint": "^8",
