--- a/package.json
+++ b/package.json
@@ -44,8 +44,6 @@
     "qrcode.react": "^4.0.1",
     "react": "^18",
     "react-color": "^2.19.3",
-    "qrcode.react": "^4.0.1",
-    "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
@@ -67,7 +65,7 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
     "three": "^0.168.0",
     "typewriter-effect": "^2.21.0"
   },
