--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "daisyui": "^4.12.10",
     "dotenv": "^16.4.5",
     "form-data": "^4.0.0",
-    "framer-motion": "^11.5.6",
+    "framer-motion": "^11.8.0",
     "lucide-react": "^0.445.0",
     "mailgun-js": "^0.22.0",
     "mailgun.js": "^10.2.3",
@@ -46,6 +46,7 @@
     "react-range": "^1.10.0",
     "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
+    "react-simple-typewriter": "^5.0.1",
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
     "react-youtube": "^10.1.0",
