--- a/package.json
+++ b/package.json
@@ -43,16 +43,16 @@
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.0.1",
     "react": "^18",
-    "react-color": "^2.19.3",
     "react-chartjs-2": "^5.2.0",
+    "react-color": "^2.19.3",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-moment": "^1.1.3",
-    "react-qr-code": "^2.0.15",
     "react-owl-carousel": "^2.3.3",
     "react-parallax": "^3.5.1",
+    "react-qr-code": "^2.0.15",
     "react-range": "^1.10.0",
     "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
@@ -65,9 +65,9 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
     "three": "^0.168.0",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "^2.21.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^8",
