--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "next-auth": "^4.24.7",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.0.1",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
     "react-datepicker": "^7.3.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
@@ -63,6 +63,7 @@
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
     "react-youtube": "^10.1.0",
+    "recharts": "^2.12.7",
     "sweetalert2": "^11.14.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
