--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-moment": "^1.1.3",
     "react-owl-carousel": "^2.3.3",
     "react-parallax": "^3.5.1",
