--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "file-saver": "^2.0.5",
     "form-data": "^4.0.0",
     "framer-motion": "^11.8.0",
+    "ionicons": "^7.4.0",
     "lucide-react": "^0.445.0",
     "mailgun-js": "^0.22.0",
     "mailgun.js": "^10.2.3",
