--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
     "form-data": "^4.0.0",
-    "framer-motion": "^11.8.0",
+    "framer-motion": "^11.11.8",
     "ionicons": "^7.4.0",
     "lucide-react": "^0.445.0",
     "mailgun-js": "^0.22.0",
@@ -57,6 +57,7 @@
     "react-countdown": "^2.3.6",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
