--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lucide-react": "^0.445.0",
     "mailgun-js": "^0.22.0",
     "mailgun.js": "^10.2.3",
+    "moment": "^2.30.1",
     "mongodb": "^6.9.0",
     "next": "^14.2.13",
     "next-auth": "^4.24.7",
