--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "clsx": "^2.1.1",
     "daisyui": "^4.12.10",
     "dotenv": "^16.4.5",
+    "downloadjs": "^1.4.7",
     "file-saver": "^2.0.5",
     "form-data": "^4.0.0",
     "framer-motion": "^11.11.8",
+    "html-to-image": "^1.11.11",
     "ionicons": "^7.4.0",
     "lucide-react": "^0.445.0",
     "mailgun-js": "^0.22.0",
