--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-minimal-pie-chart": "^8.4.0",
     "react-moment": "^1.1.3",
     "react-owl-carousel": "^2.3.3",
