--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@canvasjs/react-charts": "^1.0.2",
+    "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -44,6 +45,7 @@
     "clsx": "^2.1.1",
     "daisyui": "^4.12.10",
     "dotenv": "^16.4.5",
+    "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "form-data": "^4.0.0",
     "framer-motion": "^11.11.8",
