--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.168.0",
+    "timeago.js": "^4.0.2",
     "typewriter-effect": "^2.21.0",
     "zod": "^3.23.8"
   },
