--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "framer-motion": "^11.11.8",
     "html-to-image": "^1.11.11",
     "ionicons": "^7.4.0",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.445.0",
     "mailgun-js": "^0.22.0",
