--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countdown": "^2.3.6",
+    "react-countup": "^6.5.3",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
