--- a/package.json
+++ b/package.json
@@ -68,7 +68,6 @@
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-countdown": "^2.3.6",
     "react-countup": "^6.5.3",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
@@ -97,6 +96,7 @@
     "socket.io-client": "^4.8.0",
     "stripe": "^17.1.0",
     "styled-components": "^6.1.13",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.14.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
