event and post is share in facebook

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-range": "^1.10.0",
     "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
+    "react-share": "^5.1.0",
     "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.14.1",
     "react-spring": "^9.7.4",
